--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       font-family: "NoahGrotesqueExtraBold";
       src: url(../fonts/NoahGrotesque-ExtraBold.ttf);
       font-family: "ComfortaaVar", cursive;
-      src: url(../fonts/Comfortaa-VariableFont_wght.ttf);
+      src: url(fonts/Comfortaa-VariableFont_wght.ttf);
       font-display: swap;
     }
   
